tests/transpiler/x/zig/min_max_builtin.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/min_max_builtin.zig:6:15: error: root source file struct 'Io' has no member named 'getStdOut'
    try std.io.getStdOut().writer().print("{any}\n", .{blk: { var arr = nums; var m = arr[0]; for (arr[1..]) |v| { if (v < m) m = v; } break :blk m; }});
        ~~~~~~^~~~~~~~~~
/workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/Io.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
referenced by:
    callMain [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:637:20
    posixCallMainAndExit: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
