tests/transpiler/x/zig/min_max_builtin.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:40 +0000
const std = @import("std");

pub fn main() void {
    const nums = [_]i64{3, 1, 4};
    try std.io.getStdOut().writer().print("{any}\n", .{blk: { var arr = nums; var m = arr[0]; for (arr[1..]) |v| { if (v < m) m = v; } break :blk m; }});
    try std.io.getStdOut().writer().print("{any}\n", .{blk: { var arr = nums; var m = arr[0]; for (arr[1..]) |v| { if (v > m) m = v; } break :blk m; }});
}
